--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -1711,6 +1711,10 @@ msgid "This tag is called from the confirmation page like:"
 msgstr "Вы должны использовать данный тэг на странице подтверждения заказа в Админке - Содержание - Страницы. Просто вставьте следующую метку в шаблон страницы:"
 
 #: /vendors/smarty/vam_plugins/function.product_price.php:36
+msgid "Displays the product download link. Only for free products (product price must be 0)."
+msgstr "Выводит ссылку на загрузку товара. Только для бесплатных товаров (цена товара должна быть 0)."
+
+#: /vendors/smarty/vam_plugins/function.free_download.php:36
 msgid "Displays the product price for the current content."
 msgstr "Показывает стоимость товара."
 
