--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -5582,8 +5582,24 @@ msgid "Product Price."
 msgstr "Цена. <span class="text-danger">Разделитель целых чисел - точка. Например, цена товара 1000 рублей 50 копеек, пишем как 1000.50</span>"
 
 #: /views/import_export/admin.ctp:93
+msgid "Length."
+msgstr "Длина товара в см. <span class="text-danger">Например, длина товара 30 см, пишем как 30</span>"
+
+#: /views/import_export/admin.ctp:93
+msgid "Width."
+msgstr "Ширина товара в см. <span class="text-danger">Например, ширина товара 20 см, пишем как 20</span>"
+
+#: /views/import_export/admin.ctp:93
+msgid "Height."
+msgstr "Высота товара в см. <span class="text-danger">Например, высота товара 5 см, пишем как 5</span>"
+
+#: /views/import_export/admin.ctp:93
+msgid "Volume."
+msgstr "Объём товара в м3. <span class="text-danger">Например, объём товара 0.003 м3, пишем как 0.003</span>"
+
+#: /views/import_export/admin.ctp:93
 msgid "Weight."
-msgstr "Вес товара в граммах. <span class="text-danger">Например, вес товара товара 110 грамм, пишем как 0.110</span>"
+msgstr "Вес товара в граммах. <span class="text-danger">Например, вес товара 110 грамм, пишем как 0.110</span>"
 
 #: /views/import_export/admin.ctp:93
 msgid "Product Label."
