Корректировка перевода для модуля доставки СДЭК

--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -414,6 +414,9 @@ msgstr "Отзывы"
 msgid "RussianPost"
 msgstr "Почта России"
 
+msgid "Cdek"
+msgstr "Сдэк"
+
 msgid "RussianPostCalc"
 msgstr "Почта России"
 
