Добавлен новый модуль доставки - СПСР

--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -417,6 +417,9 @@ msgstr "Почта России"
 msgid "Cdek"
 msgstr "Сдэк"
 
+msgid "Spsr"
+msgstr "Спср"
+
 msgid "RussianPostCalc"
 msgstr "Почта России"
 
