Корректировка кода в модуле доставки СПСР

--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -423,6 +423,9 @@ msgstr "Спср"
 msgid "IKN"
 msgstr "ИКН"
 
+msgid "Shipment Type"
+msgstr "Вид отправления"
+
 msgid "RussianPostCalc"
 msgstr "Почта России"
 
