Добавлена новая метка {product_width} - выводит ширину товара

--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -1751,6 +1751,10 @@ msgstr "Показывает вес товара."
 msgid "Displays the product length for the current content."
 msgstr "Показывает длину товара."
 
+#: /vendors/smarty/vam_plugins/function.product_weight.php:36
+msgid "Displays the product width for the current content."
+msgstr "Показывает ширину товара."
+
 #: /vendors/smarty/vam_plugins/function.product_model.php:36
 msgid "Displays the product model for the current content."
 msgstr "Показывает артикул товара."
