Добавлена новая метка {product_height} - выводит высоту товара

--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -1755,6 +1755,10 @@ msgstr "Показывает длину товара."
 msgid "Displays the product width for the current content."
 msgstr "Показывает ширину товара."
 
+#: /vendors/smarty/vam_plugins/function.product_weight.php:36
+msgid "Displays the product height for the current content."
+msgstr "Показывает высоту товара."
+
 #: /vendors/smarty/vam_plugins/function.product_model.php:36
 msgid "Displays the product model for the current content."
 msgstr "Показывает артикул товара."
