Корректирока кода метки {shipping_methods}

--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -303,6 +303,9 @@ msgstr "Пароль"
 msgid "Payment Method"
 msgstr "Способы оплаты"
 
+msgid "Payment Methods"
+msgstr "Способы оплаты"
+
 msgid "per"
 msgstr "за"
 
