--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -4086,6 +4086,10 @@ msgid "Number of Orders"
 msgstr "Количество заказов"
 
 #: /View/Reports/admin.ctp:25
+msgid "Number of Orders (year ago)"
+msgstr "Количество заказов (год назад)"
+
+#: /View/Reports/admin.ctp:25
 msgid "Average Sum"
 msgstr "Средняя стоимость"
 
