Добавлен перевод на русский модулей доставки и оплаты в Админке - Настройки - Способы оплаты, Способы доставки

--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -546,5 +546,8 @@ msgstr "Загрузить:"
 msgid "Order Total:"
 msgstr "Стоимость заказа:"
 
+msgid "EmsRussianPostShipping"
+msgstr "EMS Почта России"
+
 msgid "Pek"
 msgstr "ПЭК"
