--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -2099,6 +2099,10 @@ msgid "Reply Sent"
 msgstr "Ответ отправлен"
 
 #: /views/configuration/admin_edit.ctp:40
+msgid "Search Log"
+msgstr "Поисковые запросы"
+
+#: /views/configuration/admin_edit.ctp:40
 msgid "DaData API Key"
 msgstr "DaData.Ru API ключ подсказок"
 
