Список поисковых запросов отсортирован по популярности и сгруппирован по запросам, что б не было дублей

--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -2179,6 +2179,10 @@ msgid "Search Log Listing"
 msgstr "Список поисковых запросов"
 
 #: /views/configuration/admin_edit.ctp:40
+msgid "Number of queries"
+msgstr "Количество запросов"
+
+#: /views/configuration/admin_edit.ctp:40
 msgid "Search Keywords"
 msgstr "Поисковые запросы"
 
