Добавлены новые метки для работы с API сдэк

--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -6239,3 +6239,6 @@ msgstr "Выводит стоимость товара без валюты, пр
 
 msgid "Returns the city id number from API CDEK."
 msgstr "Возвращает id номер города из API СДЭК."
+
+msgid "Displays the cdek shipping time."
+msgstr "Выводит время доставки СДЭК."
