--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -4543,7 +4543,7 @@ msgstr "Сравнение"
 
 #: /app/View/Attributes/admin_viewer_attr.ctp:61
 msgid "Filter Links"
-msgstr "Ссылки на фильтры"
+msgstr "Ссылка на фильтры"
 
 #: /app/View/Attributes/admin_viewer_attr.ctp:61
 msgid "Show Filter Links."
