Добавлен перевод для входа через соц. сети

--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -551,3 +551,9 @@ msgstr "EMS Почта России"
 
 msgid "Pek"
 msgstr "ПЭК"
+
+msgid "Social Login:"
+msgstr "Войти через:"
+
+msgid "Social Login"
+msgstr "Войти через"
