Корректировка перевода в метке {login_box}

--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -192,6 +192,9 @@ msgstr "Войти через:"
 msgid "Social Login"
 msgstr "Войти через"
 
+msgid "Google"
+msgstr "Google"
+
 #: /app_controller.php:235
 msgid "Tools"
 msgstr "Инструменты"
