--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -6276,3 +6276,6 @@ msgstr "Выводит время доставки СДЭК."
 
 msgid "Displays the current user city name."
 msgstr "Выводит название города посетителя."
+
+msgid "Top 10 results..."
+msgstr "Первые 10 позиций..."
