В импорт/экспорт добавлены поля is_new, is_featured

--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -2663,8 +2663,16 @@ msgid "New Product"
 msgstr "Новинка"
 
 #: /views/contents/admin_edit_type.ctp:49
+msgid "New Product."
+msgstr "Новинка."
+
+#: /views/contents/admin_edit_type.ctp:49
 msgid "Featured Product"
 msgstr "Рекомендуемый товар"
+
+#: /views/contents/admin_edit_type.ctp:49
+msgid "Featured Product."
+msgstr "Рекомендуемый товар."
 
 #: /views/contents/admin_edit_type.ctp:49
 msgid "Manufacturer"
