Добавлена возможность смена статус новинка/рекомендуемый прямо в списке товара в Админке - Содержание

--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -267,6 +267,9 @@ msgstr "Название (Я-А)"
 msgid "New"
 msgstr "Новинка"
 
+msgid "Featured"
+msgstr "Рекомендуемый"
+
 msgid "New Password"
 msgstr "Новый пароль"
 
