--- a/app/Locale/rus/LC_MESSAGES/default.po
+++ b/app/Locale/rus/LC_MESSAGES/default.po
@@ -6298,3 +6298,9 @@ msgstr "Первые 5 позиций:"
 
 msgid "Display all search results."
 msgstr "Показать все результаты поиска."
+
+msgid "New"
+msgstr "Новинка"
+
+msgid "Featured"
+msgstr "Рекомендуемый"
