Корректирока кода метки product_manufacturer, разметка вынесена из метки в шаблон

--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -578,3 +578,6 @@ msgstr "Первые 5 позиций:"
 
 msgid "Display all search results."
 msgstr "Показать все результаты поиска."
+
+msgid "Manufacturer"
+msgstr "Производитель"
