--- a/app/Locale/rus/LC_MESSAGES/catalog.po
+++ b/app/Locale/rus/LC_MESSAGES/catalog.po
@@ -174,6 +174,9 @@ msgstr "Бесплатная доставка"
 msgid "FlatRate"
 msgstr "Курьерская доставка"
 
+msgid "Openbank"
+msgstr "Открытие банк"
+
 msgid "YandexFizlico"
 msgstr "Яндекс.Касса (Яндекс.Деньги, Visa, MasterCard)"
 
